utc bug fixed
