# api/swagger.yaml
@@ -702,6 +702,16 @@ paths:
         description: "XXX"
         required: false
         type: string
+      - name: "guarantees"
+        in: "query"
+        description: "XXX"
+        required: false
+        type: string
+      - name: "metrics"
+        in: "query"
+        description: "XXX"
+        required: false
+        type: string
       responses:
         200:
           description: "Success"
@@ -1180,8 +1190,11 @@ definitions:
     type: object
     required:
       - initial
+      - timeZone
     properties:
       initial:
+        type: string
+      timeZone:
         type: string
       end:
         type: string
