# controllers/states/guarantees/guarantees.js
@@ -127,17 +127,18 @@ module.exports.guaranteeIdPenaltyPOST = function(args, res, next) {
     logger.ctlState("New request to GET penalty of " + guaranteeId);
 
     var offset = query.parameters.offset;
-    var periods = new getPeriods(query.window);
 
     stateManager({
         id: agreementId
     }).then((manager) => {
 
+        var periods = getPeriods(manager.agreement, query.window);
+
         var resul = [];
         Promise.each(periods, (element) => {
             var p = {
-                from: moment.utc(element.from).subtract(Math.abs(offset), "months").toISOString(),
-                to: moment.utc(element.to).subtract(Math.abs(offset), "months").toISOString()
+                from: moment(element.from).subtract(Math.abs(offset), "months").toISOString(),
+                to: moment(element.to).subtract(Math.abs(offset), "months").toISOString()
             };
             //  logger.ctlState("Query before parse: " + JSON.stringify(query, null, 2));
             var logId = Object.keys(query.logs)[0];
@@ -170,7 +171,7 @@ module.exports.guaranteeIdPenaltyPOST = function(args, res, next) {
                 var ret = [];
                 for (var i in success) {
                     var e = success[i];
-                    //logger.ctlState("compare:  " + e.period.from + ">=" + p.from.toISOString() + " && " + e.period.to + "<=" + p.to.toISOString() );
+                    //logger.ctlState("compare:  " + e.period.from + ">=" + p.from + " && " + e.period.to + "<=" + p.to );
                     if (moment.utc(e.period.from).isSameOrAfter(p.from) && moment.utc(e.period.to).isSameOrBefore(p.to) && checkQuery(e, query)) {
                         ret.push(e);
                     }
@@ -206,19 +207,19 @@ module.exports.guaranteeIdPenaltyPOST = function(args, res, next) {
 
 }
 
-function getPeriods(window) {
+function getPeriods(agreement, window) {
     var periods = [];
-    var Wfrom = moment.utc(window.initial);
+    var Wfrom = moment.utc(moment.tz(window.initial, agreement.context.validity.timeZone));
     var Wto = moment();
-    var from = moment.utc(Wfrom),
-        to = moment.utc(Wfrom).add(1, "months").subtract(1, "milliseconds");
+    var from = moment(Wfrom),
+        to = moment(Wfrom).add(1, "months").subtract(1, "milliseconds");
     while (!to || to.isSameOrBefore(Wto)) {
         periods.push({
             from: from.toISOString(),
             to: to.toISOString()
         });
-        from = moment.utc(from).add(1, "months");
-        to = moment.utc(to).add(1, "months");
+        from = moment(from).add(1, "months");
+        to = moment(to).add(1, "months");
     }
 
     return periods;
